Update pages_build_output_dir in wrangler.toml for SvelteKit compatibility

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "teaser"
 compatibility_date = "2025-01-01"
+pages_build_output_dir = ".svelte-kit/cloudflare"
 
 [[kv_namespaces]]
 binding = "WAITLIST"
