--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-cloudflare": "^7.2.8",
 		"@sveltejs/kit": "^2.50.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"sharp": "^0.34.5",
 		"svelte": "^5.51.0",
 		"vite": "^7.3.1"
 	}
