--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"dev:cf": "wrangler pages dev -- vite dev",
+		"dev:tunnel": "cloudflared tunnel --config .cloudflared/config.yml run ammoura-dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''"
